<resources>
    <string name="app_name">UNIstore</string>
    <string name="profile_logo_content_description">Logo</string>
    <string name="profile_title_logged_in">Sei registrato come</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="profile_title_logged_out">Devi essere registrato per accedere alle funzionalit&#224; principali di UNIstore</string>
    <string name="profile_login_button_label">Log in</string>
    <string name="action_settings">Impostazioni</string>
    <string name="title_activity_maps">Map</string>
    <string name="greeting">Ciao Anonimo</string>
    <string name="icon_heart">&#xf004;</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string-array name="nav_drawer_items">
        <item >Bacheca annunci</item>
        <item >Cercapersone</item>
        <item >I miei annunci</item>
        <item >I miei appuntamenti</item>
        <item >Login</item>
        <item >Logout</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="buy_button">Acquista</string>
    <string name="contact_the_author_button">Contatta</string>
    <string name="drawer_menu_title">Drawer_title</string>
    <string name="empty_string" />
    <string name="menu_open"></string>
    <string name="menu_close"></string>
    <string name="sell_button">Vendi</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisici elit...</string>
    <string name="long_lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="yes">Sì</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="confirm">Sei sicuro?</string>
    <string name="isbn">ISBN</string>
    <string name="author">Autore</string>
    <string name="title">Titolo</string>
    <string name="find_1">Cosa stai cercando?</string>
    <string name="find_2">Riceverai una notifica appena verr&#224; messo in vendita!</string>
    <string name="descrizione_libro">Descrizione del libro</string>
    <string name="search">Cerca</string>
    <string name="scan">Scan ISBN</string>
    <string name="salva_annuncio">Salva Annuncio</string>
    <string name="thumb">La foto del libro</string>
    <string name="barcode_instruction">Premi il pulsante \"<b>Scan ISBN</b>\" e aspetta qualche secondo. Quindi posiziona la fotocamera sul codice a barre del libro.</string>
    <string name="com_parse_ui_logo_content_description">Logo</string>
    <string name="com_parse_ui_progress_dialog_text">Loading...</string>
    <string name="com_parse_ui_username_input_hint">Username</string>
    <string name="com_parse_ui_password_input_hint">Password</string>
    <string name="com_parse_ui_forgot_password_button_label"><u>Forgot password</u></string>
    <string name="com_parse_ui_parse_login_button_label">Log in</string>
    <string name="com_parse_ui_parse_signup_button_label">Sign up</string>
    <string name="com_parse_ui_facebook_login_button_label">Log in with Facebook</string>
    <string name="com_parse_ui_twitter_login_button_label">Log in with Twitter</string>
    <string name="com_parse_ui_email_input_hint">Email</string>
    <string name="com_parse_ui_confirm_password_input_hint">Re-enter password</string>
    <string name="com_parse_ui_name_input_hint">Name</string>
    <string name="com_parse_ui_create_account_button_label">Create account</string>
    <string name="com_parse_ui_no_username_toast">Please enter your username</string>
    <string name="com_parse_ui_no_password_toast">Please enter your password</string>
    <string name="com_parse_ui_parse_login_invalid_credentials_toast">The username and password you entered don\'t match</string>
    <string name="com_parse_ui_parse_login_failed_unknown_toast">Could not log in, please try again later</string>
    <string name="com_parse_ui_facebook_login_failed_toast">Facebook login failed</string>
    <string name="com_parse_ui_twitter_login_failed_toast">Twitter login failed</string>
    <plurals name="com_parse_ui_password_too_short_toast">
        <item quantity="one">Password must be at least %d character long</item>
        <item quantity="other">Password must be at least %d characters long</item>
    </plurals>
    <string name="com_parse_ui_username_taken_toast">Username is already taken, please choose a different one</string>
    <string name="com_parse_ui_reenter_password_toast">Please re-enter your password</string>
    <string name="com_parse_ui_mismatch_confirm_password_toast">Passwords don\'t match, please try again</string>
    <string name="com_parse_ui_no_email_toast">Please enter your email</string>
    <string name="com_parse_ui_invalid_email_toast">Email is invalid, please correct it and try again</string>
    <string name="com_parse_ui_email_taken_toast">Email is already taken, please reset your password instead</string>
    <string name="com_parse_ui_no_name_toast">Please enter your name</string>
    <string name="com_parse_ui_signup_failed_unknown_toast">Could not sign up, please try again later</string>
    <string name="com_parse_ui_login_help_instructions">Enter your email to recover your password</string>
    <string name="com_parse_ui_login_help_email_input_hint">Email</string>
    <string name="com_parse_ui_login_help_submit_button_label">Submit</string>
    <string name="com_parse_ui_login_help_login_again_button_label">Back to Login</string>
    <string name="com_parse_ui_login_help_submit_failed_unknown">Failed to request password reset, please try again</string>
    <string name="com_parse_ui_login_help_email_sent">Please check your email for instructions on how to access your account</string>
    <string name="com_parse_ui_login_warning_layout_missing_username_field">Layout missing username field</string>
    <string name="com_parse_ui_login_warning_layout_missing_password_field">Layout missing password field</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_button">Layout missing login button</string>
    <string name="com_parse_ui_login_warning_layout_missing_signup_button">Layout missing signup button</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_help_button">Layout missing login help button</string>
    <string name="com_parse_ui_login_warning_disabled_username_password_login">Disabled username/password login and signup because of missing layout elements</string>
    <string name="com_parse_ui_login_warning_disabled_facebook_login">Layout missing Facebook login button, disabled Facebook login</string>
    <string name="com_parse_ui_login_warning_disabled_twitter_login">Layout missing Twitter login button, disabled Twitter login</string>
    <string name="com_parse_ui_login_warning_parse_login_failed">"Parse username/password login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_facebook_login_failed">"Facebook login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_twitter_login_failed">"Twitter login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_facebook_login_user_update_failed">"Updating user object after Facebook login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_twitter_login_user_update_failed">"Updating user object after Twitter login failed, exception: "</string>
    <string name="com_parse_ui_login_warning_parse_signup_failed">"Parse signup failed, exception: "</string>
    <string name="com_parse_ui_login_warning_password_reset_failed">"Parse password reset failed, exception: "</string>
    <string name="com_parse_ui_login_dispatch_user_logged_in">"User logged in, starting: "</string>
    <string name="com_parse_ui_login_dispatch_user_not_logged_in">User not logged in, starting ParseLoginActivity</string>
    <string name="no_login_button_label">Salta il Login</string>
    <string name="welcome">Benvenuto</string>
    <string name="is_logout">Ora non sei pi&#249; loggato</string>
    <string name="no_connection_message">Attivare la connessione per visualizzare gli annunci di vendita.</string>
     <string name="no_skip">NON SALTARE</string>
    <string name="skip">SALTA</string>
    <string name="skip_message">Sei sicuro di voler saltare il login? Così facendo non potrai accedere a tutte le funzionalit&#224; di</string>
    <string name="detail_transition_name">detail_animation</string>
    <string name="title_detail_transition_name">transizione titolo</string>
    <string name="image_detail_transition_name">transizione foto</string>
    <string name="price_detail_transition_name">transizione prezzo</string>
    <string name="authors_detail_transition_name">transizione autori</string>
    <string name="euro_symbol">€</string>
    <string name="authors">Autori</string>
    <string name="language">Lingua</string>
    <string name="date">Data</string>
    <string name="published_date">Data di pubblicazione</string>
    <string name="description">Descrizione</string>
    <string name="price">Prezzo</string>
    <string name="new_state">Nuovo</string>
    <string name="like_new_state">Pari al nuovo</string>
    <string name="used_state">Usato</string>
    <string name="choose_published_year_hint">Selezionare l\'anno di pubblicazione del libro</string>
    <string name="choose_language_hint">Selezionare una lingua</string>
    <string name="book_state">Stato del libro</string>
    <string name="home">Home</string>
    <string name="message_error">Si &#232; verificato un errore</string>
    <string name="fab_form">Compila il form</string>
    <string name="fab_camera">Scan del codice ISBN</string>
    <string name="logout">Logout</string>
    <string name="enter_with_an_account">Accedi</string>
    <string name="drawer_item_settings">Impostazioni</string>
    <string name="account_deleted">L\'account &#232; stato cancellato</string>
    <string name="account_not_found">L\'account non &#232; stato trovato</string>
    <string name="non_authenticated">Non sei autenticato</string>
    <string name="personal_notice">Annunci personali</string>
    <string name="notice_author">Autore dell\'annuncio</string>
    <string name="not_found">Non disponibile</string>
    <string name="contact_administrator">Si &#232; verificato un errore. Contattare l\'amministratore.</string>
    <string name="message_hint">Scrivi il messaggio</string>
    <string name="send">Invia</string>
    <string name="profile_other">Ricevente</string>
    <string name="profile_me">Io</string>
    <string name="conclude_transaction">Concludi transazione</string>
    <string name="nfc_instruction">Avvicinare il retro dei due dispositivi e toccare lo schermo, non appena sar&#224; richiesto.</string>
    <string name="notice_author_in_negotiation_transaction">C\'è un acquirente in attesa. Controlla la richiesta e, quindi, rispondi con l\'apposito tasto</string>
    <string name="buyer_in_negotiation_transaction">In attesa di risposta da parte del venditore</string>
    <string name="decide">Decidi</string>
    <string name="notice_author_start_transaction">Non ci sono ancora richieste di acquisto</string>
    <string name="done">Fatto</string>
    <string name="notice_author_purchase_agreement_transaction">Il libro è stato venduto a</string>
    <string name="purchased">Acquistati</string>
    <string name="request_for_purchase_without_name">vuole comprare il libro</string>
</resources>