<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/buy_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:id="@+id/button2"
            android:layout_marginLeft="81dp"
            android:layout_marginStart="81dp"
            android:background="#4CAF50"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:clickable="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/button3"
            android:background="#992416"
            android:layout_below="@+id/textView6"
            android:layout_toRightOf="@+id/button2"
            android:layout_toEndOf="@+id/button2"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/confirm"
            android:id="@+id/textView6"
            android:layout_above="@+id/button2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="68dp" />
    </RelativeLayout>
</LinearLayout>