<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/com_parse_ui_vertical_margin"
        android:paddingLeft="@dimen/com_parse_ui_horizontal_margin"
        android:paddingRight="@dimen/com_parse_ui_horizontal_margin"
        android:paddingBottom="@dimen/com_parse_ui_vertical_margin"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.65"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ParseLoginUI.TextView"
                android:textColor="#ffff"
                android:text="@string/profile_title_logged_in" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                style="@style/ParseLoginUI.TextView" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ParseLoginUI.TextView" />

            <Button
                android:id="@+id/login_or_logout_button"
                style="@style/ParseLoginUI.Button"
                android:textColor="#ffff"
                android:layout_marginTop="@dimen/com_parse_ui_large_vertical_spacing"
                android:text="@string/profile_logout_button_label"/>

            <Button
                android:id="@+id/no_login_button"
                style="@style/NoLoginUI.Button"
                android:textColor="#ffff"
                android:layout_marginTop="@dimen/com_parse_ui_large_vertical_spacing"
                android:text="@string/no_login_button_label" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>