<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_background" >

    <include
        android:id="@+id/fragment_toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/linear"
        android:layout_below="@+id/fragment_toolbar"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:textColor="@color/secondary_text"
            android:text="@string/barcode_instruction"
            android:textSize="21dp"
            android:id="@+id/barcode_instruction"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:visibility="visible"
            android:layout_alignParentTop="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/detecting_isbn"
            android:id="@+id/barcode_image" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fragment_toolbar"
        android:id="@+id/book_info"
        android:visibility="visible">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/book_authors"
            android:text="Autore"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/new_state"
            android:layout_alignStart="@+id/new_state"
            android:textColor="@color/primary_text"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/book_title"
            android:text="Titolo"
            android:layout_below="@+id/book_authors"
            android:layout_alignLeft="@+id/book_authors"
            android:layout_alignStart="@+id/book_authors"
            android:textColor="@color/primary_text"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nuovo"
            android:id="@+id/new_state"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/book_isbn"
            android:layout_alignStart="@+id/book_isbn"
            android:textColor="@color/primary_text"
            android:buttonTint="@color/divider"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pari al nuovo"
            android:id="@+id/like_new_state"
            android:checked="false"
            android:layout_alignTop="@+id/new_state"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:enabled="true"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:textColor="@color/primary_text"
            android:buttonTint="@color/divider"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Usato"
            android:id="@+id/used_state"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:textColor="@color/primary_text"
            android:buttonTint="@color/divider"
            android:layout_above="@+id/book_price"
            android:layout_toRightOf="@+id/like_new_state"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/book_price"
            android:text="Prezzo"
            android:editable="true"
            android:layout_below="@+id/like_new_state"
            android:layout_alignRight="@+id/like_new_state"
            android:layout_alignEnd="@+id/like_new_state"
            android:textColor="@color/primary_text"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/book_isbn"
            android:layout_below="@+id/book_price"
            android:layout_alignLeft="@+id/book_price"
            android:layout_alignStart="@+id/book_price"
            android:text="ISBN"
            android:textColor="@color/primary_text"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/book_language"
            android:text="Lingua"
            android:layout_below="@+id/book_isbn"
            android:layout_alignLeft="@+id/book_isbn"
            android:layout_alignStart="@+id/book_isbn"
            android:textColor="@color/primary_text"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/book_description"
            android:layout_below="@+id/book_language"
            android:layout_alignLeft="@+id/book_language"
            android:layout_alignStart="@+id/book_language"
            android:layout_alignParentBottom="true"
            android:editable="true"
            android:text="Descrizione:"
            android:textColor="@color/primary_text"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/book_image"
            android:clickable="true"
            android:layout_margin="8dp"
            android:contentDescription="Immagine"
            android:layout_alignLeft="@+id/book_language"
            android:layout_alignStart="@+id/book_language"
            android:layout_below="@+id/book_title" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/fragment_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/book_title_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="34px"
            android:textColor="#ff000000"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/book_authors_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffa13143"
            android:textIsSelectable="true" />

        <ImageView
            android:id="@+id/thumb_"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:contentDescription="@string/thumb" />

        <TextView
            android:id="@+id/book_date_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff592d94"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/book_description_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff000000"
            android:textIsSelectable="true" />

    </LinearLayout>

    <Button android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:elevation="@dimen/elevation_high"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/my_button"
        android:textColor="@color/icons"
        android:textSize="18dp"
        android:text="@string/scan" />

    <Button android:id="@+id/save_on_cloud_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:elevation="@dimen/elevation_high"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/my_button"
        android:textColor="@color/icons"
        android:textSize="18dp"
        android:visibility="invisible"
        android:text="@string/salva_annuncio" />

</RelativeLayout>
